# thesis_side

./: .gitignore
clang_cl_test/: .#ttttt  build.bat  main.cpp
conv/: CMakeLists.txt  README.md
conv/conv_vs_proj/conv/: conv.vcxproj
conv/conv_vs_proj/conv/Debug/: conv.ilk  vc140.idb
conv/conv_vs_proj/conv/Debug/conv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  conv.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
conv/conv_vs_proj/conv/x64/Debug/: vc140.idb
conv/conv_vs_proj/conv/x64/Debug/conv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  conv.lastbuildstate
conv/kernels/: conv_kernel.cl  conv_kernel_unrolled.cl  gaussian.cl  gaussian.ll  naive_conv_kernel.cl  test_svm_kernel.cl
conv/src/: .#utils.h  build.bat  main.cpp  utils.cpp  utils.h
conv/src/SDKUtil/: CLUtil.hpp
conv/src/coarse/: conv_coarse.cpp  conv_coarse.h  conv_coarse_svm.cpp  conv_coarse_svm.h  conv_kernel.cl  conv_kernel_unrolled.cl  test_svm_kernel.cl
conv/src/fine/: conv_fine_svm.cpp  conv_fine_svm.h  conv_fine_svm_opt.cpp  conv_fine_svm_opt.h
conv/src/gpu/: conv_gpu.cpp  conv_gpu.h  conv_gpu_opt.cpp  conv_gpu_opt.h
conv/src/seq/: conv_seq.cpp  conv_seq.h
radix_sort/: CMakeLists.txt
radix_sort/src/: common_defs.cpp  common_defs.h  main.cpp
radix_sort/src/gpu/: .#radix_sort_gpu.cl  radix_sort_gpu.cl  rs_gpu.cpp  rs_gpu.h
radix_sort/src/seq/: rs_seq.cpp  rs_seq.h
radix_sort2/: CMakeLists.txt  README.md
radix_sort2/src/: build.linux  utils.h
radix_sort2/src/seq/: rs_seq.cpp
shared/: utils.cpp  utils.h
tuts/conv/: CMakeLists.txt
tuts/conv/src/: main.cpp
tuts/prod_cons/: CMakeLists.txt
tuts/prod_cons/src/: main.cpp  producer-consumer.cl  producer.cl
tuts/prod_cons/src/Utils/: utils.c
tuts/svm_tut/intel_tut/intel_ocl_svm_basic_win/: README.TXT
tuts/svm_tut/intel_tut/intel_ocl_svm_basic_win/SVMBasicCoarseGrained/: SVMBasicCoarseGrained_2012.sln  SVMBasicCoarseGrained_2012.vcxproj  SVMBasicCoarseGrained_2013.sln  SVMBasicCoarseGrained_2013.vcxproj  SVMBasicCoarseGrained_2015.sln  SVMBasicCoarseGrained_2015.vcxproj  SVMBasicCoarseGrained_2015.vcxproj.filters
tuts/svm_tut/intel_tut/intel_ocl_svm_basic_win/SVMBasicFineGrained/: SVMBasicFineGrained_2012.sln  SVMBasicFineGrained_2012.vcxproj  SVMBasicFineGrained_2013.sln  SVMBasicFineGrained_2013.vcxproj  SVMBasicFineGrained_2015.sln  SVMBasicFineGrained_2015.vcxproj
tuts/vec_add/: CMakeLists.txt
tuts/vec_add/src/: main.cpp
tuts/vec_add_cpp/: CMakeLists.txt
tuts/vec_add_cpp/src/: main.cpp
vs/vs/: vs.sln
vs/vs/Debug/: conv.ilk
vs/vs/vs/: vs.vcxproj
vs/vs/vs/Debug/vs.tlog/: vs.lastbuildstate
vs/vs/vs/x64/Debug/vs.tlog/: vs.lastbuildstate
